# parallel_programming

./: README.md
Assignment2_MeasuringParallelPerformance/: ParallelCoinFlip.java
Assignment2_MeasuringParallelPerformance/src/: ParallelCoinFlip.java  ParallelCoinFlipStartupCost.java  SealedDESParallel.java  benchmark.sh  log_Sealed_DES.txt  log_coin.txt
Assignment3_ThreesCompany/: FoF.java  Links.txt  README.txt  fof.mapper.php  fof.reducer.php
Assignment4_CellularAutomata/: README  gameoflife.c  gameoflife.h
ompsmooth/: CMakeLists.txt  README  ompsmooth.c  ompsmooth.h  smooth.c  smoothBAK.c
